# The-Evolution-of-Todo

./: .gitignore  AGENTS-AND-SKILLS-ARCHITECTURE.md  README.md
.claude/agents/: adr-documenter.md  analysis-agent.md  constitution-agent.md  docker-infrastructure.md  event-driven-infra.md  full-agent-structure-generator.md  git-agent.md  implementation-executor.md  phr-recorder.md  (+8 more)
.specify/: config.yaml
backend/: .env.example  CLAUDE.md  pyproject.toml  requirements.txt  test_models.py  verify_backend.py
backend/app/: auth.py  config.py  main.py  main_test.py
backend/app/api/: deps.py
backend/app/api/routes/: auth.py  tasks.py
backend/app/database/: connection.py  init_db.py
backend/app/models/: task.py  user.py
backend/app/schemas/: task.py  user.py
backend/app/services/: task_service.py
backend/app/utils/: jwt.py
backend/tests/: conftest.py  test_auth.py  test_backend_fixed.py  test_backend_pytest.py  test_integration_fixed.py  test_integration_proper.py  test_main.py
frontend/: CLAUDE.md  README.md  lint_results.txt  next.config.ts  package-lock.json  package.json  tailwind.config.ts  test-api-connection.js  test-auth-flow.js  trigger-better-auth-init.js  verify-integration.js
phase-I/: README.md  main.py  pyproject.toml  test_manual.py
phase-I/src/: __init__.py
phase-I/src/cli/: __init__.py  app.py  main.py
phase-I/src/models/: __init__.py  task.py
phase-I/src/repository/: __init__.py  task_repository.py
phase-I/src/service/: __init__.py  task_service.py
phase-I/todo_console.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
(+112 files in other folders)
