[project]
name = "todo-console"
version = "1.0.0"
description = "Phase I - In-Memory Todo Console Application"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
todo = "src.cli.app:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src", "src.models", "src.repository", "src.service", "src.cli"]
